fixed shop now button on video screen, created slider for three images, removed overflow on left and right of screen

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+}
 header{
     position: fixed;
     top: 0;
@@ -164,3 +167,57 @@ header.sticky ul li a{
     border-radius: 50px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.slider1 {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    border-radius: 0.5rem;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    height: 600px;
+}
+.slider1::-webkit-scrollbar {
+    display: none;
+}
+.slider1 img {
+    width: 100%;
+    height: 100%;
+    scroll-snap-align: end;
+    object-fit: cover;
+}
+.slider1-wrapper {
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    left: auto;
+}
+.slider1-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+.slider1-nav a{
+    width: 1rem;
+    height: 1rem;
+    background-color: #e23c52;
+    border-radius: 50%;
+    opacity: 0.7;
+    transition: ocacity ease 250ms;
+}
+.slider1-nav a:hover{
+    opacity: 1;
+}
+.slider1-nav a.active {
+    opacity: 1;
+}
+
+
